<resources>
    <string name="app_name">Red Cross Duty Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_duty">Case Management</string>

    <string name="prompt_station">Callsign</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register New User</string>
    <string name="invalid_email">This callsign is invalid</string>
    <string name="invalid_station">This station id is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="title_activity_case_details">Case Details</string>
    <string name="respond_no">No</string>
    <string name="respond_yes">Yes</string>
    <string name="title_activity_complaint">Select Complaint</string>
    <string name="treatment">Continue to Treatment</string>
    <string name="logout">Logout</string>
    <string name="title_activity_treatment">TreatmentActivity</string>
    <string name="treat_on_site">Treat on Site</string>
    <string name="remove_to_hospital">Remove to Hospital</string>
    <string name="discharged">Discharged</string>
    <string name="record_outcome">Record Outcome</string>
    <string name="respondOK">OK</string>
    <string name="title_activity_case_view">CaseViewActivity</string>
    <string name="continue_treatment">Continue Treatment</string>
    <string name="view_treatment">View Treatment</string>
    <string name="title_activity_view_treatment">View Treatment</string>
</resources>
