<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/highlight"
        android:textSize="25sp"
        android:text="@string/record_outcome"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="20dp"
        android:background="@color/toolbarBackground"
        android:layout_weight="50">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/itemview_outcome"
            android:layout_width="match_parent"
            android:textColor="@color/toolbarText"
            android:textColorHint="@color/toolbarText"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:gravity="left"
            android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="30"
        android:orientation="vertical">
        <RadioGroup
            android:layout_margin="20dp"
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/discharged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discharged"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_to_hospital"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/onsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/treat_on_site"
                android:textSize="18sp"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:onClick="handleOK"
        android:layout_width="wrap_content"
        android:layout_marginRight="1dp"
        android:gravity="center_horizontal"
        android:background="@color/toolbarBackground"
        android:textColor="@color/toolbarText"
        android:textSize="25sp"
        android:layout_height="match_parent"
        android:text="@string/respondOK"
        />

</LinearLayout>