<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbarBackground"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/fragment_login_title"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/toolbarText"
        android:textSize="30sp"/>

    <AutoCompleteTextView
        android:id="@+id/station_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_station"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:shadowColor="@android:color/white"
        android:singleLine="true"
        android:textColor="@color/toolbarText"
        android:textColorHighlight="@color/toolbarText"
        android:textColorHint="@color/toolbarText"
        android:textColorLink="@color/toolbarText"/>

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:shadowColor="@android:color/white"
        android:singleLine="true"
        android:textColor="@color/toolbarText"
        android:textColorHighlight="@color/toolbarText"
        android:textColorHint="@color/toolbarText"
        android:textColorLink="@color/toolbarText"/>

    <Button
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/darkBackground"
        android:text="@string/action_sign_in"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:onClick="handleSignIn"/>


</LinearLayout>